tests/conformance/invalid/division_by_zero.ecl
// SPDX-License-Identifier: PMPL-1.0-or-later

// Test: Division by zero
fn main() {
    let x = 10 / 0;  // Should fail at runtime
}
